# EMBA-MCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/emba_mcp/: filesystem.py  mcp_server.py  models.py
src/emba_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/emba_mcp/emba_analyzers/: attack_path.py  high_risk.py
src/emba_mcp/emba_parsers/: binary_protection.py  bootloader.py  credentials.py  distribution.py  interesting_files.py  kernel.py  network_services.py  password_files.py  permissions.py  php_vulns.py  sbom.py  weak_crypto.py  weak_functions.py
src/emba_mcp/emba_runner/: config.py  registry.py  runner.py
src/emba_mcp/state/: scan_registry.json
