[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emba-mcp"
version = "0.1.0"
description = "EMBA firmware analysis exposed as an MCP server"
authors = [
  { name = "m3hd" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
